Fix issue with loading on 1.8 Java runtimes